test/fail/multiindex.min
program
    array x
start
    x[0][0] := 2;
end
